--- a/build.gradle
+++ b/build.gradle
@@ -9,32 +9,32 @@
 // compose versions: see https://developer.android.com/jetpack/androidx/releases/compose
 buildscript {
     ext {
-        kotlinVersion = "2.2.20"
-        composeVersion = "1.7.0"
-        composeMaterialVersion = "1.7.0"
-        composeCompilerVersion = "1.7.0"
+        kotlinVersion = "2.3.0"
+        composeVersion = "1.10.0"
+        composeMaterialVersion = "1.10.0"
+        composeCompilerVersion = "1.5.15"
         coroutinesVersion = "1.10.2"
         androidLifecycleVersion = "2.9.4"
         androidReviewVersion = "2.0.2"
 
-        kspVersion = '2.1.20-2.0.1'
-        ktlintVersion = "11.3.1"
+        kspVersion = '2.3.4'
+        ktlintVersion = "14.0.1"
         koinVersion = "4.1.1"
-        roomVersion = "2.8.3"
-        pagingVersion = "3.3.2"
+        roomVersion = "2.8.4"
+        pagingVersion = "3.3.6"
         contactStoreVersion = "1.7.0"
 
         junitJupiterVersion = "6.0.1"
         junit5AndroidVersion = "1.9.0"
         archUnitVersion = "1.4.1"
-        mockkVersion = "1.13.4" // version 1.13.9 introduces strange bugs with IContactIdInternal
+        mockkVersion = "1.14.7"
     }
     repositories {
         google()
         mavenCentral()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:8.11.2'
+        classpath 'com.android.tools.build:gradle:9.2.1'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:${kotlinVersion}"
         classpath "org.jlleitschuh.gradle:ktlint-gradle:${ktlintVersion}"
         classpath "de.mannodermaus.gradle.plugins:android-junit5:1.14.0.0"
